--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hello</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-  <main>
-    <h1>Hei maailma!</h1>
-  </main>
+    <main>
+        <h1>Hei maailma!</h1>
+        <div id="datetime"></div>
+        <button>Mitä kello on?</button>
+    </main>
 
 </body>
 
